// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "minHeight": 44,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "/super-awesome-image.jpg",
      }
    }
    style={
      Object {
        "height": 32,
        "marginRight": 20,
        "marginVertical": 6,
        "width": 32,
      }
    }
  />
  <View
    style={
      Object {
        "flexShrink": 1,
        "justifyContent": "center",
        "paddingVertical": 6,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      type="h4"
    >
      some thing
    </Text>
  </View>
</View>
`;

exports[`renders correctly when passed an onPress handler 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "minHeight": 44,
    }
  }
>
  <Image
    source={
      Object {
        "uri": "/super-awesome-image.jpg",
      }
    }
    style={
      Object {
        "height": 32,
        "marginRight": 20,
        "marginVertical": 6,
        "width": 32,
      }
    }
  />
  <Touchable
    accessibilityComponentType="button"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    delayPressIn={50}
    onPress={[Function]}
    style={
      Object {
        "flexShrink": 1,
        "justifyContent": "center",
        "paddingVertical": 6,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      type="h4"
    >
      some thing
    </Text>
  </Touchable>
</View>
`;
